@@ -8,11 +8,14 @@
 package dev.hardwood.avro;
 
 import java.io.ByteArrayOutputStream;
+import java.lang.reflect.Proxy;
 import java.math.BigDecimal;
 import java.math.BigInteger;
 import java.nio.ByteBuffer;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -28,21 +31,308 @@ import org.apache.avro.io.EncoderFactory;
 import org.junit.jupiter.api.Test;
 
 import dev.hardwood.InputFile;
+import dev.hardwood.avro.internal.AvroPlanNode;
 import dev.hardwood.avro.internal.AvroSchemaConverter;
+import dev.hardwood.internal.reader.FileAwareRowReader;
+import dev.hardwood.metadata.LogicalType.IntType;
+import dev.hardwood.metadata.LogicalType.ListType;
+import dev.hardwood.metadata.LogicalType.MapType;
+import dev.hardwood.metadata.LogicalType.NullType;
+import dev.hardwood.metadata.LogicalType.StringType;
+import dev.hardwood.metadata.PhysicalType;
+import dev.hardwood.metadata.RepetitionType;
+import dev.hardwood.metadata.SchemaElement;
 import dev.hardwood.reader.FilterPredicate;
 import dev.hardwood.reader.ParquetFileReader;
 import dev.hardwood.reader.RowReader;
+import dev.hardwood.row.PqList;
+import dev.hardwood.row.PqMap;
+import dev.hardwood.row.PqStruct;
 import dev.hardwood.row.PqVariant;
 import dev.hardwood.row.VariantType;
 import dev.hardwood.schema.ColumnProjection;
+import dev.hardwood.schema.FileSchema;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatCode;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 
 class AvroRowReaderTest {
 
     private static final Path TEST_RESOURCES = Path.of("").toAbsolutePath()
             .resolve("../core/src/test/resources").normalize();
+
+    @Test
+    void rejectMapsWhoseKeysCannotBeRepresentedByAvro() throws Exception {
+        assertUnsupportedMapKey("map_types_test.parquet", "int_map", "INT32");
+        assertUnsupportedMapKey("typed_accessors_issue_445.parquet", "time_keyed", "INT32");
+        assertUnsupportedMapKey("map_typed_keys_test.parquet", "long_keyed", "INT64");
+    }
+
+    /// The rejection covers the projected schema, so an unreadable map costs only
+    /// its own column: the remaining columns of the same file still read.
+    @Test
+    void readsRemainingColumnsOfAFileCarryingAnUnsupportedMap() throws Exception {
+        // map_types_test.parquet: id INT32, string_map, int_map (map<int32, int64>), bool_map — 3 rows
+        try (ParquetFileReader fileReader = ParquetFileReader.open(
+                InputFile.of(TEST_RESOURCES.resolve("map_types_test.parquet")));
+                AvroRowReader reader = AvroReaders.buildRowReader(fileReader)
+                        .projection(ColumnProjection.columns("id")).build()) {
+            List<Object> ids = new ArrayList<>();
+            while (reader.hasNext()) {
+                ids.add(reader.next().get("id"));
+            }
+            assertThat(ids).containsExactly(1, 2, 3);
+        }
+    }
+
+    private static void assertUnsupportedMapKey(String fixture, String column, String keyType)
+            throws Exception {
+        try (ParquetFileReader fileReader = ParquetFileReader.open(
+                InputFile.of(TEST_RESOURCES.resolve(fixture)))) {
+            assertThatThrownBy(() -> {
+                try (AvroRowReader ignored = AvroReaders.buildRowReader(fileReader)
+                        .projection(ColumnProjection.columns(column)).build()) {
+                    // Schema conversion happens while the reader is built.
+                }
+            })
+                    .isInstanceOf(IllegalArgumentException.class)
+                    .hasMessageContaining(column)
+                    .hasMessageContaining(keyType);
+        }
+    }
+
+    @Test
+    void wrongRawTypeNamesRootFieldAndAvroType() {
+        FileSchema schema = primitiveSchema("value", PhysicalType.INT32, RepetitionType.REQUIRED);
+        AvroPlanNode plan = AvroSchemaConverter.plan(schema, ColumnProjection.all());
+        RowReader rows = proxy(RowReader.class, values(
+                "next", null,
+                "isNull", false,
+                "getRawValue", "wrong"));
+
+        assertThatThrownBy(() -> new AvroRowReader(rows, plan).next())
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessageContaining("field 'value'")
+                .hasMessageContaining("Avro INT")
+                .hasMessageContaining("java.lang.String");
+    }
+
+    @Test
+    void rewrittenFieldUsesParquetAccessor() {
+        FileSchema schema = primitiveSchema("a-b", PhysicalType.INT32, RepetitionType.REQUIRED);
+        AvroPlanNode plan = AvroSchemaConverter.plan(schema, ColumnProjection.all());
+        RowReader rows = (RowReader) Proxy.newProxyInstance(
+                RowReader.class.getClassLoader(),
+                new Class<?>[] { RowReader.class },
+                (proxy, method, arguments) -> {
+                    if (method.getName().equals("isNull") || method.getName().equals("getRawValue")) {
+                        if (arguments == null || arguments.length != 1 || !"a-b".equals(arguments[0])) {
+                            throw new AssertionError("unexpected accessor key: "
+                                    + (arguments == null ? null : arguments[0]));
+                        }
+                        return method.getName().equals("isNull") ? false : 42;
+                    }
+                    if (method.getName().equals("next")) {
+                        return null;
+                    }
+                    if (method.getName().equals("close")) {
+                        return null;
+                    }
+                    throw new AssertionError("Unexpected accessor: " + method.getName());
+                });
+
+        try (AvroRowReader reader = new AvroRowReader(rows, plan)) {
+            GenericRecord record = reader.next();
+            assertThat(record.getSchema().getField("a_b").getProp(AvroSchemaConverter.PARQUET_NAME_PROP))
+                    .isEqualTo("a-b");
+            assertThat(record.get("a_b")).isEqualTo(42);
+        }
+    }
+
+    @Test
+    void wrongRawTypeNamesNestedStructField() {
+        FileSchema schema = nestedPrimitiveSchema();
+        AvroPlanNode plan = AvroSchemaConverter.plan(schema, ColumnProjection.all());
+        PqStruct struct = proxy(PqStruct.class, values(
+                "isNull", false,
+                "getRawValue", "wrong"));
+        RowReader rows = proxy(RowReader.class, values(
+                "next", null,
+                "isNull", false,
+                "getStruct", struct));
+
+        assertThatThrownBy(() -> new AvroRowReader(rows, plan).next())
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessageContaining("struct field 'value'")
+                .hasMessageContaining("Avro INT")
+                .hasMessageContaining("java.lang.String");
+    }
+
+    @Test
+    void wrongDecodedTypeNamesListElement() {
+        FileSchema schema = listStringSchema();
+        AvroPlanNode plan = AvroSchemaConverter.plan(schema, ColumnProjection.all());
+        PqList list = proxy(PqList.class, values(
+                "size", 1,
+                "isNull", false,
+                "get", 42));
+        RowReader rows = proxy(RowReader.class, values(
+                "next", null,
+                "isNull", false,
+                "getList", list));
+
+        assertThatThrownBy(() -> new AvroRowReader(rows, plan).next())
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessageContaining("list element 0")
+                .hasMessageContaining("Avro STRING")
+                .hasMessageContaining("java.lang.Integer");
+    }
+
+    @Test
+    void wrongFixedWidthNamesRootField() {
+        SchemaElement root = SchemaElement.root("root", 1);
+        SchemaElement value = SchemaElement.fixedLengthPrimitive("value", 4, RepetitionType.REQUIRED);
+        FileSchema schema = FileSchema.fromSchemaElements(List.of(root, value));
+        AvroPlanNode plan = AvroSchemaConverter.plan(schema, ColumnProjection.all());
+        RowReader rows = proxy(RowReader.class, values(
+                "next", null,
+                "isNull", false,
+                "getRawValue", new byte[] { 1, 2 }));
+
+        assertThatThrownBy(() -> new AvroRowReader(rows, plan).next())
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessageContaining("field 'value'")
+                .hasMessageContaining("Avro FIXED")
+                .hasMessageContaining("required fixed width 4")
+                .hasMessageContaining("byte[]");
+    }
+
+    @Test
+    void nullDecodedTypeNamesMapValue() {
+        FileSchema schema = mapStringSchema();
+        AvroPlanNode plan = AvroSchemaConverter.plan(schema, ColumnProjection.all());
+        PqMap.Entry entry = proxy(PqMap.Entry.class, values(
+                "getStringKey", "key",
+                "isValueNull", false,
+                "getStringValue", null));
+        PqMap map = proxy(PqMap.class, values("getEntries", List.of(entry), "size", 1));
+        RowReader rows = proxy(RowReader.class, values(
+                "next", null,
+                "isNull", false,
+                "getMap", map));
+
+        assertThatThrownBy(() -> new AvroRowReader(rows, plan).next())
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessageContaining("map value for key 'key'")
+                .hasMessageContaining("Avro STRING")
+                .hasMessageContaining("actual Java value type null");
+    }
+
+    @Test
+    void nonNullValueForNullLogicalTypeFailsAtRootField() {
+        SchemaElement root = SchemaElement.root("root", 1);
+        SchemaElement value = SchemaElement.primitive("value", PhysicalType.INT32, RepetitionType.OPTIONAL,
+                new NullType());
+        FileSchema schema = FileSchema.fromSchemaElements(List.of(root, value));
+        AvroPlanNode plan = AvroSchemaConverter.plan(schema, ColumnProjection.all());
+        RowReader rows = proxy(RowReader.class, values(
+                "next", null,
+                "isNull", false,
+                "getValue", 42));
+
+        assertThatThrownBy(() -> new AvroRowReader(rows, plan).next())
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessageContaining("field 'value'")
+                .hasMessageContaining("Avro NULL")
+                .hasMessageContaining("java.lang.Integer")
+                .hasMessageContaining("NULL has no non-null materialization");
+    }
+
+    @Test
+    void nonNullValueForNullLogicalTypeFailsAtListElement() {
+        AvroPlanNode plan = AvroSchemaConverter.plan(listOfNullSchema(), ColumnProjection.all());
+        PqList list = proxy(PqList.class, values(
+                "size", 1,
+                "isNull", false,
+                "get", 42));
+        RowReader rows = proxy(RowReader.class, values(
+                "next", null,
+                "isNull", false,
+                "getList", list));
+
+        assertThatThrownBy(() -> new AvroRowReader(rows, plan).next())
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessageContaining("list element 0")
+                .hasMessageContaining("Avro NULL")
+                .hasMessageContaining("java.lang.Integer")
+                .hasMessageContaining("NULL has no non-null materialization");
+    }
+
+    @Test
+    void nonNullValueForNullLogicalTypeFailsAtMapValue() {
+        AvroPlanNode plan = AvroSchemaConverter.plan(mapOfNullSchema(), ColumnProjection.all());
+        PqMap.Entry entry = proxy(PqMap.Entry.class, values(
+                "getStringKey", "key",
+                "isValueNull", false,
+                "getValue", 42));
+        PqMap map = proxy(PqMap.class, values("getEntries", List.of(entry), "size", 1));
+        RowReader rows = proxy(RowReader.class, values(
+                "next", null,
+                "isNull", false,
+                "getMap", map));
+
+        assertThatThrownBy(() -> new AvroRowReader(rows, plan).next())
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessageContaining("map value for key 'key'")
+                .hasMessageContaining("Avro NULL")
+                .hasMessageContaining("java.lang.Integer")
+                .hasMessageContaining("NULL has no non-null materialization");
+    }
+
+    /// A materialization failure is attributable to a file, the way the core readers
+    /// already mark their own exceptions — otherwise a multi-file read reports a row
+    /// position with no file to pin it to.
+    @Test
+    void materializationFailureNamesTheFileOfTheCurrentRow() {
+        FileSchema schema = primitiveSchema("value", PhysicalType.INT32, RepetitionType.REQUIRED);
+        AvroPlanNode plan = AvroSchemaConverter.plan(schema, ColumnProjection.all());
+        RowReader rows = proxy(FileAwareRowReader.class, values(
+                "next", null,
+                "isNull", false,
+                "currentFileName", "part-01.parquet",
+                "getRawValue", "wrong"));
+
+        assertThatThrownBy(() -> new AvroRowReader(rows, plan).next())
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessageStartingWith("[part-01.parquet] ")
+                .hasMessageContaining("field 'value'");
+    }
+
+    /// The shape issue #897 reported: `UINT32` stores as `INT32` but converts to Avro
+    /// `long`, so an accessor picked off the Avro type serves a `Long` the widening
+    /// step cannot use.
+    @Test
+    void wrongRawTypeForUnsignedIntNamesRootField() {
+        SchemaElement root = SchemaElement.root("root", 1);
+        SchemaElement count = SchemaElement.primitive("count", PhysicalType.INT32, RepetitionType.REQUIRED,
+                new IntType(32, false));
+        FileSchema schema = FileSchema.fromSchemaElements(List.of(root, count));
+        AvroPlanNode plan = AvroSchemaConverter.plan(schema, ColumnProjection.all());
+        RowReader rows = proxy(RowReader.class, values(
+                "next", null,
+                "isNull", false,
+                "getRawValue", 7L));
+
+        assertThatThrownBy(() -> new AvroRowReader(rows, plan).next())
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessageContaining("field 'count'")
+                // Naming the kind keeps "Avro LONG … required java.lang.Integer" from
+                // reading as a contradiction.
+                .hasMessageContaining("Avro LONG (UNSIGNED_INT32)")
+                .hasMessageContaining("java.lang.Long")
+                .hasMessageContaining("required java.lang.Integer");
+    }
 
     @Test
     void readFlatSchema() throws Exception {
@@ -97,7 +387,7 @@ class AvroRowReaderTest {
             List<GenericRecord> records = readAll(reader);
             assertThat(records).isNotEmpty();
 
-            GenericRecord first = records.get(0);
+            GenericRecord first = records.getFirst();
             assertThat(first.get("id")).isEqualTo(1);
 
             Object addressObj = first.get("address");
@@ -110,6 +400,47 @@ class AvroRowReaderTest {
         }
     }
 
+    /// The names the converter rewrites have to still address values on a real file: the
+    /// two `address` records are told apart by namespace only, and both `acme.address` and
+    /// `a-b` reach their columns through their Parquet names while the record exposes them
+    /// under the rewritten Avro names.
+    @Test
+    void readsRecordsWhoseNamesTheConverterRewrote() throws Exception {
+        // avro_name_resolution.parquet: home.address.city, work.address.zip,
+        // 'acme.address'.city, 'a-b' — 2 rows
+        try (ParquetFileReader fileReader = ParquetFileReader.open(
+                InputFile.of(TEST_RESOURCES.resolve("avro_name_resolution.parquet")));
+             AvroRowReader reader = AvroReaders.rowReader(fileReader)) {
+
+            Schema schema = reader.getSchema();
+            assertThat(schema.toString()).contains("\"name\":\"address\",\"namespace\":\"schema.home\"",
+                    "\"name\":\"address\",\"namespace\":\"schema.work\"");
+            assertThat(schema.getField("acme_address").getProp(AvroSchemaConverter.PARQUET_NAME_PROP))
+                    .isEqualTo("acme.address");
+            assertThat(schema.getField("a_b").getProp(AvroSchemaConverter.PARQUET_NAME_PROP))
+                    .isEqualTo("a-b");
+
+            List<GenericRecord> records = readAll(reader);
+            assertThat(records).hasSize(2);
+
+            GenericRecord first = records.getFirst();
+            assertThat(nested(nested(first, "home"), "address").get("city").toString()).isEqualTo("Timbuktu");
+            assertThat(nested(nested(first, "work"), "address").get("zip")).isEqualTo(73);
+            assertThat(nested(first, "acme_address").get("city").toString()).isEqualTo("Valparaiso");
+            assertThat(first.get("a_b")).isEqualTo(42);
+
+            GenericRecord second = records.get(1);
+            assertThat(nested(nested(second, "home"), "address").get("city").toString()).isEqualTo("Reykjavik");
+            assertThat(second.get("acme_address")).isNull();
+            assertThat(second.get("a_b")).isEqualTo(7);
+        }
+    }
+
+    /// A record read through a nullable field, which the converter wraps in a union.
+    private static GenericRecord nested(GenericRecord record, String field) {
+        return (GenericRecord) record.get(field);
+    }
+
     @Test
     void readList() throws Exception {
         // list_basic_test.parquet: id INT32, tags list<string>, scores list<int>
@@ -120,7 +451,7 @@ class AvroRowReaderTest {
             List<GenericRecord> records = readAll(reader);
             assertThat(records).isNotEmpty();
 
-            GenericRecord first = records.get(0);
+            GenericRecord first = records.getFirst();
             assertThat(first.get("id")).isEqualTo(1);
 
             Object tags = first.get("tags");
@@ -142,13 +473,36 @@ class AvroRowReaderTest {
             List<GenericRecord> records = readAll(reader);
             assertThat(records).isNotEmpty();
 
-            GenericRecord first = records.get(0);
+            GenericRecord first = records.getFirst();
             Object attrs = first.get("attributes");
             assertThat(attrs).isInstanceOf(Map.class);
 
             @SuppressWarnings("unchecked")
             Map<String, Object> attrMap = (Map<String, Object>) attrs;
             assertThat(attrMap).isNotEmpty();
+        }
+    }
+
+    @Test
+    void readKeyOnlyMapAsNullValuedMap() throws Exception {
+        try (ParquetFileReader fileReader = ParquetFileReader.open(
+                InputFile.of(TEST_RESOURCES.resolve("map_key_only_test.parquet")));
+             AvroRowReader reader = AvroReaders.rowReader(fileReader)) {
+
+            Schema mapSchema = resolveNullable(reader.getSchema().getField("tags").schema());
+            assertThat(mapSchema.getType()).isEqualTo(Schema.Type.MAP);
+            assertThat(mapSchema.getValueType().getType()).isEqualTo(Schema.Type.NULL);
+
+            List<GenericRecord> records = readAll(reader);
+            assertThat(records).hasSize(2);
+            @SuppressWarnings("unchecked")
+            Map<String, Object> firstTags = (Map<String, Object>) records.get(0).get("tags");
+            @SuppressWarnings("unchecked")
+            Map<String, Object> secondTags = (Map<String, Object>) records.get(1).get("tags");
+            assertThat(firstTags)
+                    .containsEntry("a", null)
+                    .containsEntry("b", null);
+            assertThat(secondTags).containsEntry("c", null);
         }
     }
 
@@ -174,7 +528,8 @@ class AvroRowReaderTest {
         try (ParquetFileReader fileReader = ParquetFileReader.open(
                 InputFile.of(TEST_RESOURCES.resolve("nested_struct_test.parquet")))) {
 
-            Schema schema = AvroSchemaConverter.convert(fileReader.getFileSchema());
+            Schema schema = AvroSchemaConverter.plan(
+                    fileReader.getFileSchema(), ColumnProjection.all()).avro();
             assertThat(schema.getType()).isEqualTo(Schema.Type.RECORD);
 
             // id field — INT32 → Avro INT
@@ -238,6 +593,80 @@ class AvroRowReaderTest {
                 decoded |= ((long) (row4Value[1 + i] & 0xFF)) << (8 * i);
             }
             assertThat(decoded).isEqualTo(1_000_000_000_000L);
+        }
+    }
+
+    @Test
+    void readVariantInListAndMapPositions() throws Exception {
+        // variant_in_repeated_test.parquet carries the same VARIANT group at the
+        // top level, as a map value, and as a list element. All three convert to
+        // the RECORD{metadata, value} shape, so all three must materialize it —
+        // a list element surfaces as PqVariant and a map value has to be read
+        // through getVariantValue rather than getStructValue.
+        Path fixture = TEST_RESOURCES.resolve("variant_in_repeated_test.parquet");
+
+        try (ParquetFileReader fileReader = ParquetFileReader.open(InputFile.of(fixture));
+             AvroRowReader reader = AvroReaders.rowReader(fileReader)) {
+
+            Schema schema = reader.getSchema();
+            List<GenericRecord> rows = readAll(reader);
+            assertThat(rows).hasSize(2);
+
+            // Row 1 payloads: BOOLEAN_TRUE (0x04), INT32(7), short string "hi".
+            Map<?, ?> varMap = (Map<?, ?>) rows.get(0).get("var_map");
+            assertThat(varMap).hasSize(2);
+            assertThat(bytes(((GenericRecord) varMap.get("a")).get("value"))).containsExactly(0x04);
+            assertThat(bytes(((GenericRecord) varMap.get("b")).get("value")))
+                    .containsExactly(0x14, 7, 0, 0, 0);
+
+            List<?> varList = (List<?>) rows.get(0).get("var_list");
+            assertThat(varList).hasSize(3);
+            assertThat(bytes(((GenericRecord) varList.get(0)).get("value"))).containsExactly(0x04);
+            assertThat(bytes(((GenericRecord) varList.get(2)).get("value")))
+                    .containsExactly(0x09, 'h', 'i');
+
+            assertThatCode(() -> serialize(schema, rows)).doesNotThrowAnyException();
+        }
+    }
+
+    @Test
+    void ordinaryVariantShapedRecordsKeepStructIdentity() throws Exception {
+        Path fixture = TEST_RESOURCES.resolve("avro_variant_identity_test.parquet");
+
+        try (ParquetFileReader fileReader = ParquetFileReader.open(InputFile.of(fixture));
+             AvroRowReader reader = AvroReaders.rowReader(fileReader)) {
+
+            List<GenericRecord> rows = readAll(reader);
+            assertThat(rows).hasSize(1);
+            GenericRecord row = rows.get(0);
+
+            GenericRecord plainTop = (GenericRecord) row.get("plain_top");
+            assertThat(bytes(plainTop.get("metadata"))).containsExactly("plain-top-metadata".getBytes(StandardCharsets.UTF_8));
+            assertThat(bytes(plainTop.get("value"))).containsExactly("plain-top-value".getBytes(StandardCharsets.UTF_8));
+
+            GenericRecord plainContainer = (GenericRecord) row.get("plain_container");
+            GenericRecord plainNested = (GenericRecord) plainContainer.get("plain_nested");
+            assertThat(bytes(plainNested.get("metadata"))).containsExactly("plain-nested-metadata".getBytes(StandardCharsets.UTF_8));
+            assertThat(bytes(plainNested.get("value"))).containsExactly("plain-nested-value".getBytes(StandardCharsets.UTF_8));
+
+            GenericRecord plainListElement = (GenericRecord) ((List<?>) row.get("plain_list")).get(0);
+            assertThat(bytes(plainListElement.get("metadata"))).containsExactly("plain-list-metadata".getBytes(StandardCharsets.UTF_8));
+            assertThat(bytes(plainListElement.get("value"))).containsExactly("plain-list-value".getBytes(StandardCharsets.UTF_8));
+
+            GenericRecord plainMapValue = (GenericRecord) ((Map<?, ?>) row.get("plain_map")).get("plain-key");
+            assertThat(bytes(plainMapValue.get("metadata"))).containsExactly("plain-map-metadata".getBytes(StandardCharsets.UTF_8));
+            assertThat(bytes(plainMapValue.get("value"))).containsExactly("plain-map-value".getBytes(StandardCharsets.UTF_8));
+
+            GenericRecord realVariant = (GenericRecord) row.get("real_variant");
+            assertThat(bytes(realVariant.get("metadata"))).containsExactly(0x01, 0x00, 0x00);
+            assertThat(bytes(realVariant.get("value"))).containsExactly(0x04);
+
+            GenericRecord variantContainer = (GenericRecord) row.get("variant_container");
+            GenericRecord realNestedVariant = (GenericRecord) variantContainer.get("real_nested_variant");
+            assertThat(bytes(realNestedVariant.get("metadata"))).containsExactly(0x01, 0x00, 0x00);
+            assertThat(bytes(realNestedVariant.get("value"))).containsExactly(0x14, 42, 0, 0, 0);
+
+            assertThatCode(() -> serialize(reader.getSchema(), rows)).doesNotThrowAnyException();
         }
     }
 
@@ -318,8 +747,9 @@ class AvroRowReaderTest {
             assertThat(uint32Schema.getType()).isEqualTo(Schema.Type.LONG);
             assertThat(uint64Schema.getType()).isEqualTo(Schema.Type.LONG);
 
-            // UINT_32 schemas carry the marker that routes the reader to getInt + widen;
-            // UINT_64 schemas (already long[]-backed) must not carry it.
+            // The converted schema records the unsignedness Avro cannot express, so a
+            // consumer holding only the schema can still tell a widened UINT_32 from a
+            // UINT_64, which is long[]-backed and carries no marker.
             assertThat(idSchema.getObjectProp(AvroSchemaConverter.UNSIGNED_INT32_PROP))
                     .isEqualTo(Boolean.TRUE);
             assertThat(uint32Schema.getObjectProp(AvroSchemaConverter.UNSIGNED_INT32_PROP))
@@ -345,6 +775,88 @@ class AvroRowReaderTest {
             assertThat(records.get(2).get("id")).isEqualTo(3L);
             assertThat(records.get(2).get("uint32_val")).isEqualTo(4294967295L);
             assertThat(records.get(2).get("uint64_val")).isEqualTo(-1L);
+        }
+    }
+
+    @Test
+    void fixedBackedColumnsMaterializeAsAvroFixed() throws Exception {
+        // INT96, INTERVAL under either annotation, and FLOAT16 all convert to Avro `fixed`
+        // and read as their on-disk bytes — 12, 12 and 2 wide. They share one plan kind with
+        // FIXED_LEN_BYTE_ARRAY decimals, and nothing pinned them through the reader.
+        assertFixedColumn("int96_timestamp_test.parquet", "ts", 12);
+        assertFixedColumn("interval_logical_type_test.parquet", "duration", 12);
+        assertFixedColumn("interval_legacy_converted_type_test.parquet", "duration", 12);
+        assertFixedColumn("float16_logical_type_test.parquet", "half", 2);
+    }
+
+    @Test
+    void fixedBackedListElementsMaterializeAsAvroFixed() throws Exception {
+        // list_float16_test.parquet: scores is a list<float16>, so the element takes the
+        // same `fixed` representation the scalar positions do.
+        try (ParquetFileReader fileReader = ParquetFileReader.open(
+                InputFile.of(TEST_RESOURCES.resolve("list_float16_test.parquet")));
+             AvroRowReader reader = AvroReaders.rowReader(fileReader)) {
+
+            List<GenericRecord> rows = readAll(reader);
+            @SuppressWarnings("unchecked")
+            List<Object> scores = (List<Object>) rows.getFirst().get("scores");
+            assertThat(scores).isNotEmpty();
+            assertThat(scores.getFirst()).isInstanceOf(GenericData.Fixed.class);
+            assertThat(((GenericData.Fixed) scores.getFirst()).bytes()).hasSize(2);
+
+            assertThatCode(() -> serialize(reader.getSchema(), rows)).doesNotThrowAnyException();
+        }
+    }
+
+    /// Assert that `field` of `fixture` converts to an Avro `fixed` of `size` bytes and
+    /// materializes as a [GenericData.Fixed] of that width.
+    private static void assertFixedColumn(String fixture, String field, int size) throws Exception {
+        try (ParquetFileReader fileReader = ParquetFileReader.open(
+                InputFile.of(TEST_RESOURCES.resolve(fixture)));
+             AvroRowReader reader = AvroReaders.rowReader(fileReader)) {
+
+            Schema fieldSchema = reader.getSchema().getField(field).schema();
+            if (fieldSchema.isUnion()) {
+                fieldSchema = fieldSchema.getTypes().stream()
+                        .filter(s -> s.getType() != Schema.Type.NULL)
+                        .findFirst()
+                        .orElseThrow();
+            }
+            assertThat(fieldSchema.getType()).isEqualTo(Schema.Type.FIXED);
+            assertThat(fieldSchema.getFixedSize()).isEqualTo(size);
+
+            List<GenericRecord> rows = readAll(reader);
+            assertThat(rows).isNotEmpty();
+            assertThat(rows.getFirst().get(field)).isInstanceOf(GenericData.Fixed.class);
+            assertThat(((GenericData.Fixed) rows.getFirst().get(field)).bytes()).hasSize(size);
+
+            assertThatCode(() -> serialize(reader.getSchema(), rows)).doesNotThrowAnyException();
+        }
+    }
+
+    @Test
+    @SuppressWarnings("unchecked")
+    void temporalValuesReadTheSameWayAtEveryPosition() throws Exception {
+        // local_timestamp_test.parquet carries the same TIMESTAMP(MICROS, NTZ) column as a
+        // field, a list element and a map value. Avro types a timestamp as a `long` under a
+        // logical type, so every position must yield the epoch micros — a decoded
+        // LocalDateTime would contradict the very schema the record is built from and fail
+        // to serialize.
+        try (ParquetFileReader fileReader = ParquetFileReader.open(
+                InputFile.of(TEST_RESOURCES.resolve("local_timestamp_test.parquet")));
+             AvroRowReader reader = AvroReaders.rowReader(fileReader)) {
+
+            GenericRecord row = readAll(reader).getFirst();
+
+            assertThat(row.get("local_micros")).isEqualTo(1772703000123456L);
+            assertThat((List<Object>) row.get("local_ts_list"))
+                    .containsExactly(1772703000000000L, 1772704800000000L);
+            Map<Object, Object> tsMap = (Map<Object, Object>) row.get("local_ts_map");
+            assertThat(tsMap)
+                    .containsEntry("start", 1772703000000000L)
+                    .containsEntry("end", 1772704800000000L);
+
+            assertThatCode(() -> serialize(reader.getSchema(), List.of(row))).doesNotThrowAnyException();
         }
     }
 
@@ -432,6 +944,34 @@ class AvroRowReaderTest {
                     .isEqualTo("87654321-4321-8765-4321-876543218765");
             assertThat(records.get(2).get("account_id").toString())
                     .isEqualTo("aaaaaaaa-bbbb-cccc-dddd-eeeeeeeeeeee");
+        }
+    }
+
+    @Test
+    void readUuidListElements() throws Exception {
+        // uuid_list_test.parquet: session_ids is a list<uuid>. The list element
+        // path shares the Avro STRING arm with UTF-8 columns, so the uuid logical
+        // type has to keep it off the plain string decode — otherwise the 16 raw
+        // bytes surface as mojibake instead of the canonical UUID string.
+        try (ParquetFileReader fileReader = ParquetFileReader.open(
+                InputFile.of(TEST_RESOURCES.resolve("uuid_list_test.parquet")));
+             AvroRowReader reader = AvroReaders.rowReader(fileReader)) {
+
+            Schema element = resolveNullable(
+                    resolveNullable(reader.getSchema().getField("session_ids").schema()).getElementType());
+            assertThat(element.getType()).isEqualTo(Schema.Type.STRING);
+            assertThat(element.getLogicalType().getName()).isEqualTo("uuid");
+
+            List<GenericRecord> records = readAll(reader);
+            assertThat(records).hasSize(3);
+            List<?> firstIds = (List<?>) records.get(0).get("session_ids");
+            assertThat(firstIds).hasSize(2);
+            assertThat(firstIds.get(0)).isEqualTo("12345678-1234-5678-1234-567812345678");
+            assertThat(firstIds.get(1)).isEqualTo("87654321-4321-8765-4321-876543218765");
+            List<?> secondIds = (List<?>) records.get(1).get("session_ids");
+            assertThat(secondIds).hasSize(1);
+            assertThat(secondIds.get(0)).isNull();
+            assertThat((List<?>) records.get(2).get("session_ids")).isEmpty();
         }
     }
 
@@ -868,6 +1408,68 @@ class AvroRowReaderTest {
     }
 
     @Test
+    void enumValuesMaterializeAsStringsAtEveryNestingPosition() throws Exception {
+        // enum_nested_test.parquet: ENUM values occur at the top level, inside a
+        // struct, as list elements, and as map values. Avro maps ENUM to string,
+        // so every non-null materialized value must be a String.
+        try (ParquetFileReader fileReader = ParquetFileReader.open(
+                InputFile.of(TEST_RESOURCES.resolve("enum_nested_test.parquet")));
+             AvroRowReader reader = AvroReaders.rowReader(fileReader)) {
+
+            Schema schema = reader.getSchema();
+            assertThat(resolveNullable(schema.getField("status").schema()).getType())
+                    .isEqualTo(Schema.Type.STRING);
+            assertThat(resolveNullable(resolveNullable(schema.getField("tags").schema()).getElementType()).getType())
+                    .isEqualTo(Schema.Type.STRING);
+            Schema meta = resolveNullable(schema.getField("meta").schema());
+            assertThat(resolveNullable(meta.getField("kind").schema()).getType())
+                    .isEqualTo(Schema.Type.STRING);
+            assertThat(resolveNullable(resolveNullable(schema.getField("labels").schema()).getValueType()).getType())
+                    .isEqualTo(Schema.Type.STRING);
+
+            List<GenericRecord> records = readAll(reader);
+            assertThat(records).hasSize(3);
+
+            assertThat(records.get(0).get("status")).isEqualTo("ACTIVE");
+            assertThat(((GenericRecord) records.get(0).get("meta")).get("kind")).isEqualTo("PRIMARY");
+            List<?> firstTags = (List<?>) records.get(0).get("tags");
+            assertThat(firstTags).hasSize(2);
+            assertThat(firstTags.get(0)).isEqualTo("RED");
+            assertThat(firstTags.get(1)).isEqualTo("GREEN");
+            assertThat(((Map<?, ?>) records.get(0).get("labels")).get("a")).isEqualTo("ON");
+
+            assertThat(records.get(1).get("status")).isEqualTo("INACTIVE");
+            assertThat(((GenericRecord) records.get(1).get("meta")).get("kind")).isEqualTo("SECONDARY");
+            List<?> secondTags = (List<?>) records.get(1).get("tags");
+            assertThat(secondTags).hasSize(1);
+            assertThat(secondTags.get(0)).isEqualTo("BLUE");
+            Map<?, ?> secondLabels = (Map<?, ?>) records.get(1).get("labels");
+            assertThat(secondLabels).hasSize(2);
+            assertThat(secondLabels.get("b")).isEqualTo("OFF");
+            assertThat(secondLabels.get("c")).isEqualTo("ON");
+
+            assertThat(records.get(2).get("status")).isNull();
+            GenericRecord thirdMeta = (GenericRecord) records.get(2).get("meta");
+            assertThat(thirdMeta.get("kind")).isNull();
+            assertThat(((List<?>) records.get(2).get("tags")).get(0)).isNull();
+            assertThat(((Map<?, ?>) records.get(2).get("labels")).get("d")).isNull();
+        }
+    }
+
+    @Test
+    void enumListRecordsSerializeWithGeneratedSchema() throws Exception {
+        try (ParquetFileReader fileReader = ParquetFileReader.open(
+                InputFile.of(TEST_RESOURCES.resolve("enum_nested_test.parquet")));
+             AvroRowReader reader = AvroReaders.rowReader(fileReader)) {
+
+            Schema schema = reader.getSchema();
+            List<GenericRecord> records = readAll(reader);
+
+            assertThatCode(() -> serialize(schema, records)).doesNotThrowAnyException();
+        }
+    }
+
+    @Test
     void listOfDecimalOnFixedMaterializesAsGenericFixed() throws Exception {
         // list_decimal_flba_test.parquet: id INT32, amounts list<decimal(10,2)>
         // stored as FIXED_LEN_BYTE_ARRAY(5). The Avro element type is a `fixed`
@@ -903,6 +1505,98 @@ class AvroRowReaderTest {
 
     private static BigDecimal decimalFromFixed(Object fixed) {
         return new BigDecimal(new BigInteger(((GenericData.Fixed) fixed).bytes()), 2);
+    }
+
+    private static FileSchema primitiveSchema(String name, PhysicalType type, RepetitionType repetition) {
+        SchemaElement root = SchemaElement.root("root", 1);
+        SchemaElement value = SchemaElement.primitive(name, type, repetition);
+        return FileSchema.fromSchemaElements(List.of(root, value));
+    }
+
+    private static FileSchema nestedPrimitiveSchema() {
+        SchemaElement root = SchemaElement.root("root", 1);
+        SchemaElement struct = SchemaElement.group("record", RepetitionType.REQUIRED, 1);
+        SchemaElement value = SchemaElement.primitive("value", PhysicalType.INT32, RepetitionType.REQUIRED);
+        return FileSchema.fromSchemaElements(List.of(root, struct, value));
+    }
+
+    private static FileSchema listStringSchema() {
+        SchemaElement root = SchemaElement.root("root", 1);
+        SchemaElement list = SchemaElement.group("items", RepetitionType.REQUIRED, 1, new ListType());
+        SchemaElement repeated = SchemaElement.group("list", RepetitionType.REPEATED, 1);
+        SchemaElement element = SchemaElement.primitive("element", PhysicalType.BYTE_ARRAY, RepetitionType.REQUIRED,
+                new StringType());
+        return FileSchema.fromSchemaElements(List.of(root, list, repeated, element));
+    }
+
+    /// `list<null>` — every element is null in a well-formed file, so the `NULL` arm of
+    /// the element switch is only reachable when the accessors and the plan disagree.
+    private static FileSchema listOfNullSchema() {
+        SchemaElement root = SchemaElement.root("root", 1);
+        SchemaElement list = SchemaElement.group("nulls", RepetitionType.REQUIRED, 1, new ListType());
+        SchemaElement repeated = SchemaElement.group("list", RepetitionType.REPEATED, 1);
+        SchemaElement element = SchemaElement.primitive("element", PhysicalType.INT32, RepetitionType.OPTIONAL, new NullType());
+        return FileSchema.fromSchemaElements(List.of(root, list, repeated, element));
+    }
+
+    /// `map<string, null>` — the map counterpart of [#listOfNullSchema].
+    private static FileSchema mapOfNullSchema() {
+        SchemaElement root = SchemaElement.root("root", 1);
+        SchemaElement map = SchemaElement.group("attributes", RepetitionType.REQUIRED, 1, new MapType());
+        SchemaElement keyValue = SchemaElement.group("key_value", RepetitionType.REPEATED, 2);
+        SchemaElement key = SchemaElement.primitive("key", PhysicalType.BYTE_ARRAY, RepetitionType.REQUIRED, new StringType());
+        SchemaElement value = SchemaElement.primitive("value", PhysicalType.INT32, RepetitionType.OPTIONAL,
+                new NullType());
+        return FileSchema.fromSchemaElements(List.of(root, map, keyValue, key, value));
+    }
+
+    private static FileSchema mapStringSchema() {
+        SchemaElement root = SchemaElement.root("root", 1);
+        SchemaElement map = SchemaElement.group("attributes", RepetitionType.REQUIRED, 1, new MapType());
+        SchemaElement keyValue = SchemaElement.group("key_value", RepetitionType.REPEATED, 2);
+        SchemaElement key = SchemaElement.primitive("key", PhysicalType.BYTE_ARRAY, RepetitionType.REQUIRED, new StringType());
+        SchemaElement value = SchemaElement.primitive("value", PhysicalType.BYTE_ARRAY, RepetitionType.REQUIRED, new StringType());
+        return FileSchema.fromSchemaElements(List.of(root, map, keyValue, key, value));
+    }
+
+    private static Map<String, Object> values(Object... entries) {
+        Map<String, Object> values = new HashMap<>();
+        for (int i = 0; i < entries.length; i += 2) {
+            values.put((String) entries[i], entries[i + 1]);
+        }
+        return values;
+    }
+
+    @SuppressWarnings("unchecked")
+    private static <T> T proxy(Class<T> type, Map<String, Object> values) {
+        return (T) Proxy.newProxyInstance(
+                type.getClassLoader(),
+                new Class<?>[] { type },
+                (proxy, method, arguments) -> {
+                    if (method.getName().equals("toString")) {
+                        return type.getSimpleName() + " proxy";
+                    }
+                    if (method.getName().equals("hashCode")) {
+                        return System.identityHashCode(proxy);
+                    }
+                    if (method.getName().equals("equals")) {
+                        return proxy == arguments[0];
+                    }
+                    if (values.containsKey(method.getName())) {
+                        return values.get(method.getName());
+                    }
+                    throw new AssertionError("Unexpected accessor: " + method.getName());
+                });
+    }
+
+    private static Schema resolveNullable(Schema schema) {
+        if (!schema.isUnion()) {
+            return schema;
+        }
+        return schema.getTypes().stream()
+                .filter(candidate -> candidate.getType() != Schema.Type.NULL)
+                .findFirst()
+                .orElseThrow();
     }
 
     private static void serialize(Schema schema, List<GenericRecord> records) throws Exception {
